# rsomics-gaussian-filter

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: gaussian.rs
src/: lib.rs  main.rs
tests/: compat.rs
tests/golden/: float_1x1_s10_mirror.in  float_1x1_s10_mirror.out  float_1x9_s10_mirror.in  float_1x9_s10_mirror.out  float_20x30_s25_reflect.out  float_20x30_s50_nearest.in  float_20x30_s50_nearest.out  float_4x5_s00_nearest.in  float_4x5_s00_nearest.out  float_5x7_s08_nearest.out  float_5x7_s10_constant.in  float_5x7_s10_constant.out  float_5x7_s10_nearest.out  float_5x7_s10_reflect.out  float_5x7_s10_wrap.out  float_5x7_s25_nearest.out  float_5x7_s50_nearest.out  float_9x1_s10_mirror.in  float_9x1_s10_mirror.out  int_20x30_s10_nearest.in  int_20x30_s10_nearest.out  int_20x30_s25_nearest.out  int_20x30_s25_reflect.out  int_3x3_s10_nearest.out  int_3x3_s10_reflect.in  int_3x3_s10_reflect.out  int_3x3_s10_wrap.out  int_50x60_s10_nearest.out  int_50x60_s25_nearest.in  int_50x60_s25_nearest.out  int_5x7_s08_nearest.out  int_5x7_s10_constant.out  int_5x7_s10_constant05.in  int_5x7_s10_constant05.out  int_5x7_s10_mirror.out  int_5x7_s10_nearest.out  int_5x7_s10_reflect.out  int_5x7_s10_trunc30.out  int_5x7_s10_trunc50.out  int_5x7_s10_wrap.out  (+3 more)
