[package]
name = "rsomics-gaussian-filter"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
description = "Value-exact Gaussian blur — port of skimage.filters.gaussian / scipy.ndimage.gaussian_filter"
license = "MIT OR Apache-2.0"
keywords = ["bioinformatics", "imaging", "gaussian", "filter"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "rsomics-gaussian-filter"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "gaussian"
harness = false
